[gd_scene load_steps=3 format=3 uid="uid://bmd35h5a4fcru"]

[ext_resource type="FontFile" uid="uid://c1l47aekqn13v" path="res://assets/fonts/m3x6.ttf" id="1_6oakf"]
[ext_resource type="Script" uid="uid://d3imusmrwow82" path="res://scripts/lobby.gd" id="1_efll3"]

[node name="lobby_ui" type="Node2D"]
script = ExtResource("1_efll3")

[node name="user_info_vbox" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 240.0
offset_right = 320.0
offset_bottom = 30.0
grow_horizontal = 0

[node name="steam_name_label" type="Label" parent="user_info_vbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6oakf")
theme_override_font_sizes/font_size = 16
text = "Steam Name"
horizontal_alignment = 2

[node name="steam_id_label" type="Label" parent="user_info_vbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6oakf")
theme_override_font_sizes/font_size = 16
text = "Steam Id"
horizontal_alignment = 2

[node name="top_buttons_hbox" type="HBoxContainer" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 235.0
offset_bottom = 26.0

[node name="create_lobby_button" type="Button" parent="top_buttons_hbox"]
custom_minimum_size = Vector2(70, 15)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6oakf")
theme_override_font_sizes/font_size = 16
text = "Create Lobby"

[node name="lobby_code_text_area" type="TextEdit" parent="top_buttons_hbox"]
custom_minimum_size = Vector2(70, 15)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6oakf")
theme_override_font_sizes/font_size = 16
placeholder_text = "lobby code"
scroll_past_end_of_file = true

[node name="join_lobby_button" type="Button" parent="top_buttons_hbox"]
custom_minimum_size = Vector2(70, 15)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6oakf")
text = "Join Lobby"

[node name="players_and_chat_hbox" type="HBoxContainer" parent="."]
offset_left = 5.0
offset_top = 35.0
offset_right = 315.0
offset_bottom = 150.0

[node name="players_panel" type="Panel" parent="players_and_chat_hbox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="players_count" type="Label" parent="players_and_chat_hbox/players_panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_right = 21.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_6oakf")
theme_override_font_sizes/font_size = 16
text = "Players (0)"

[node name="players_list" type="RichTextLabel" parent="players_and_chat_hbox/players_panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.5
offset_top = 20.0
offset_right = 32.5
offset_bottom = 90.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("1_6oakf")
theme_override_font_sizes/normal_font_size = 16

[node name="messaging_vbox" type="VBoxContainer" parent="players_and_chat_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="chat_panel" type="Panel" parent="players_and_chat_hbox/messaging_vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="chat_messages" type="RichTextLabel" parent="players_and_chat_hbox/messaging_vbox/chat_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_6oakf")
theme_override_font_sizes/normal_font_size = 16

[node name="HBoxContainer" type="HBoxContainer" parent="players_and_chat_hbox/messaging_vbox"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2

[node name="message_line_edit" type="LineEdit" parent="players_and_chat_hbox/messaging_vbox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_6oakf")
theme_override_font_sizes/font_size = 16
placeholder_text = "message"
max_length = 100
editable = false

[node name="send_message_button" type="Button" parent="players_and_chat_hbox/messaging_vbox/HBoxContainer"]
custom_minimum_size = Vector2(30, 21)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6oakf")
theme_override_font_sizes/font_size = 16
disabled = true
text = "Send"

[node name="bottom_buttons_control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 155.0
offset_right = 315.0
offset_bottom = 176.0

[node name="leave_lobby_button" type="Button" parent="bottom_buttons_control"]
custom_minimum_size = Vector2(70, 15)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.5
offset_right = 70.0
offset_bottom = 10.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6oakf")
disabled = true
text = "Leave Lobby"

[node name="start_game_button" type="Button" parent="bottom_buttons_control"]
visible = false
custom_minimum_size = Vector2(70, 15)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -10.5
offset_bottom = 10.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6oakf")
disabled = true
text = "Start Game"

[node name="ready_game_button" type="Button" parent="bottom_buttons_control"]
visible = false
custom_minimum_size = Vector2(70, 15)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -10.5
offset_bottom = 10.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6oakf")
disabled = true
text = "Ready"

[node name="join_game_button" type="Button" parent="bottom_buttons_control"]
visible = false
custom_minimum_size = Vector2(70, 15)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -10.5
offset_bottom = 10.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6oakf")
disabled = true
text = "Join Game"

[connection signal="pressed" from="top_buttons_hbox/create_lobby_button" to="." method="_on_create_lobby_button_pressed"]
[connection signal="pressed" from="top_buttons_hbox/join_lobby_button" to="." method="_on_join_lobby_button_pressed"]
[connection signal="pressed" from="players_and_chat_hbox/messaging_vbox/HBoxContainer/send_message_button" to="." method="_on_send_message_button_pressed"]
[connection signal="pressed" from="bottom_buttons_control/leave_lobby_button" to="." method="_on_leave_lobby_button_pressed"]
[connection signal="pressed" from="bottom_buttons_control/start_game_button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="bottom_buttons_control/ready_game_button" to="." method="_on_ready_game_button_pressed"]
[connection signal="pressed" from="bottom_buttons_control/join_game_button" to="." method="_on_join_game_button_pressed"]
